--- a/src/components/UserForm/UserForm.module.css
+++ b/src/components/UserForm/UserForm.module.css
@@ -17,10 +17,8 @@
     text-transform: capitalize;
 
     border-radius: 10px;
-    border: 1px solid #e3e3e3;
-
+    /*border: 1px solid #e3e3e3;*/
 }
-
 
 .UserForm input:focus,
 .UserForm input:active,
