--- a/src/components/UI/Modal/Modal.module.css
+++ b/src/components/UI/Modal/Modal.module.css
@@ -1,10 +1,11 @@
 .Modal {
-    height: 200px;
+    height: 25%;
     width: 30%;
 
     position: absolute;
     top: 50%;
     left: 50%;
+
     transform: translate(-50%, -50%);
 
     z-index: 50;
