--- a/src/components/PenPalCard/PenPalCard.module.css
+++ b/src/components/PenPalCard/PenPalCard.module.css
@@ -5,7 +5,7 @@
     height: 100%;
 
     padding: 5% 3%;
-    margin-top: 3%;
+    margin-bottom: 3%;
 
     background-color: #e3e3e3;
     border-radius: 10px;
@@ -15,3 +15,9 @@
 
     box-shadow: 0 3px 2px rgba(190,190,190, 1);
 }
+
+
+.PenPalCard:hover {
+    background-color: #3c50fb;
+}
+
