--- a/src/components/UI/Modal/Modal.module.css
+++ b/src/components/UI/Modal/Modal.module.css
@@ -13,4 +13,7 @@
     border: 1px solid #e3e3e3;
     border-radius: 10px;
     box-shadow: 0 3px 2px rgba(190,190,190, 0.5);
+
+    position:fixed;
+    overflow-y: scroll;
 }
