--- a/src/components/ChatInput/ChatInput.module.css
+++ b/src/components/ChatInput/ChatInput.module.css
@@ -1,10 +1,8 @@
 .ChatInput {
     width: 50%;
-    left: 25%;
+    margin: 0 auto;
+    margin-top: 5%;
     text-align: center;
-
-    position: fixed;
-    bottom: 0;
 }
 
 .ChatInput textarea {
